# dj-lucide

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  download_lucide_icons.py  pyproject.toml
.github/: SECURITY.md
.github/workflows/: main.yml  update-lucide.yml
requirements/: compile.py  py310-django50.txt  py311-django50.txt  py312-django50.txt  py313-django42.txt  py314-django52.txt
scripts/: bump_version.py
src/lucide/: __init__.py
src/lucide/management/commands/: update_lucide_icons.py
src/lucide/templatetags/: lucide.py
tests/: test_django.py  test_jinja.py  test_lucide.py
